Remove no longer required mobile jumplink target offset

--- a/docs/_static/style.css
+++ b/docs/_static/style.css
@@ -414,10 +414,6 @@ nav a {
     margin: auto;
   }
 
-  :target {
-    scroll-margin-top: 190px;
-  }
-
   #hamburger-toggle {
     position: fixed;
     top: 12px;
